--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -6,10 +6,7 @@ on:
     branches:
       - main
       - 'feature/*'
-env:
-  MONGO_URI: ‘mongodb+srv://supercluster.d83jj.mongodb.net/superData'
-  MONGO_USERNAME: superuser
-  MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
+    
 jobs:
     unit-testing:
         name: Unit Testing
@@ -30,8 +27,23 @@ jobs:
           run: npm test
           
         - name: Archive Test Result
-          if: always()
           uses: actions/upload-artifact@v3
+          if: always()
           with:
             name: Mocha-Test-Result
             path: test-results.xml
+    code-coverage:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4
+        - uses: actions/setup-node@v3
+          with:
+            node-version: 18
+        - run: npm install
+        - continue-on-error: true
+          run: npm run coverage
+        - uses: actions/upload-artifact@v3
+          with:
+            name: Code-Coverage-Result
+            path: coverage
+            retention-days: 5
