--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -6,29 +6,40 @@ on:
     branches:
       - main
       - 'feature/*'
-    
+
+
 jobs:
     unit-testing:
         name: Unit Testing
         runs-on: ubuntu-latest
+        env:
+          DRY_RUN: true
         steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
+        - name: test
+          if: env.DRY_RUN == true
+          run: |
+            echo "hello there"
 
-        - name: Setup NodeJS Version
-          uses: actions/setup-node@v3
-          with:
-            node-version: 20
+        - name: something else
+          if: env.DRY_RUN != true
+          run: echo "bye"
+
+        # - name: Setup NodeJS Version
+        #   uses: actions/setup-node@v3
+        #   with:
+        #     node-version: 20
     
-        - name: Install Dependencies
-          run: npm install
+        # - name: Install Dependencies
+        #   run: npm install
     
-        - name: Unit Testing
-          run: npm test
+        # - name: Unit Testing
+        #   run: npm test
           
-        - name: Archive Test Result
-          uses: actions/upload-artifact@v3
-          if: always()
-          with:
-            name: Mocha-Test-Result
-            path: test-results.xml
+        # - name: Archive Test Result
+        #   uses: actions/upload-artifact@v3
+        #   if: always()
+        #   with:
+        #     name: Mocha-Test-Result
+        #     path: test-results.xml
