--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -18,7 +18,7 @@ jobs:
         - name: Checkout Repository
           uses: actions/checkout@v4
         - name: test
-          if: env.DRY_RUN == true
+          if: ${{env.DRY_RUN}} == true
           run: |
             echo "hello there"
 
